force-app/main/default/objects/Accrued_Interest__c/Accrued_Interest__c.object-meta.xml
<CustomObject>
    <label>Accrued Interest</label>
    <nameField>
        <label>ccrued Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accrued Interest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>