force-app/main/default/objects/Accrued_Interest__c/fields/accrued_interest__c.field-meta.xml
<CustomField>
    <fullName>accrued_interest__c</fullName>
    <label>accrued_interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>