force-app/main/default/objects/Accrued_Interest__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Accrued Interest</relationshipLabel>
    <relationshipName>Accrued_Interest</relationshipName>
    <type>Lookup</type>
</CustomField>