force-app/main/default/objects/Accrued_Interest__c/fields/total_days_accrued__c.field-meta.xml
<CustomField>
    <fullName>total_days_accrued__c</fullName>
    <label>total_days_accrued</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>